Fixed bug where welcome section link button was too big for the screen width on small screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -404,7 +404,7 @@ body {
 }
 
 #welcome-section > .link-button {
-    width: 400px;
+    width: 350px;
     margin-top: 50px;
 }
 
